tests/baselines/reference/accessorDeclarationEmitJs(strict=true).errors.txt
/a.js(10,9): error TS7032: Property 'setter' implicitly has type 'any', because its set accessor lacks a parameter type annotation.
/a.js(10,16): error TS7006: Parameter 'v' implicitly has an 'any' type.


==== /a.js (2 errors) ====
    export const t1 = {
        p: 'value',
        get getter() {
            return 'value';
        },
    }
    
    export const t2 = {
        v: 'value',
        set setter(v) {},
            ~~~~~~
!!! error TS7032: Property 'setter' implicitly has type 'any', because its set accessor lacks a parameter type annotation.
                   ~
!!! error TS7006: Parameter 'v' implicitly has an 'any' type.
    }
    
    export const t3 = {
        p: 'value',
        get value() {
            return 'value';
        },
        set value(v) {},
    }
    